profile settings and profile bugs

--- a/app/templates/header.hbs
+++ b/app/templates/header.hbs
@@ -57,7 +57,7 @@
                           <img src="http://placehold.it/50x50"> <!-- logged photo -->
                         </div>
                         <div id="header-text" style=" margin-left:10px; display:inline">
-                          Katka Šikovná <!-- logged name -->
+                          Franta řešitel <!-- logged name -->
                         </div>
                         <div style=" margin-left:10px; display:inline">
                           <span class="glyphicon glyphicon-menu-down" aria-hidden="true" style="color:#fff"></span>
