--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -40,23 +40,17 @@
 			</div>
 
 			<div class="row">
-        <div class="col-sm-1">
-					<p id="profile-points-text">Skóre: </p>
+        <div class="col-sm-4">
+					<div id="profile-points-text" class="inline">Skóre: </div>
+					<div id="profile-points" class="inline" style="margin-left:10px">113</div> <!-- body -->
 				</div>
-				<div class="col-sm-3">
-					<p id="profile-points">113</p> <!-- body -->
+        <div class="col-sm-4">
+					<div id="profile-points-text" class="inline">Percentil: </div>
+					<div id="profile-points" class="inline" style="margin-left:10px">87.7%</div> <!-- percentil -->
 				</div>
-        <div class="col-sm-1">
-					<p id="profile-points-text">Percentil: </p>
-				</div>
-				<div class="col-sm-3">
-					<p id="profile-points" style="margin-left:4px">87.7%</p> <!-- percentil -->
-				</div>
-				<div class="col-sm-1">
-					<p id="profile-points-text">Ročníky: </p>
-				</div>
-				<div class="col-sm-3">
-					<p id="profile-points">2</p> <!-- rocnik -->
+				<div class="col-sm-4">
+					<div id="profile-points-text" class="inline">Ročníky: </div>
+					<div id="profile-points" class="inline" style="margin-left:10px">2</div> <!-- rocnik -->
 				</div>
       </div>
 
@@ -66,7 +60,7 @@
 				Úspešný řešitel:
 			</p>
 			<div class="progress" style="margin-top:20px">
-				<div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+				<div class="progress-bar progress-bar-warning progress-bar-ksi" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
 					60%
 				</div>
 			</div>
@@ -97,18 +91,16 @@
 			<div class="panel panel-profile-assignment">
 				<div class="panel-body">
 					<div class="row">
-						<div class="col-sm-1">
-							<img src="http://placehold.it/40x40"> <!-- obrazok ulohy -->
-						</div>
-						<div class="col-sm-5">
-							<h5>První úloha</h5> <!-- nazov ulohy --> <!-- TODO odkaz na ulohu -->
+						<div class="col-sm-6">
+							<img class="inline" src="http://placehold.it/40x40"> <!-- obrazok ulohy -->
+							<label class="inline" style="margin-left:10px">První úloha</label> <!-- nazov ulohy --> <!-- TODO odkaz na ulohu -->
 						</div>
 						<div class="col-sm-4">
 							<img src="http://placehold.it/40x40"> <!-- trofej -->
 							<img src="http://placehold.it/40x40"> <!-- trofej -->
 						</div>
 						<div class="col-sm-2">
-							<h5>10</h5> <!-- pocet bodov -->
+							<h5 style="margin-left: 10px">10</h5> <!-- pocet bodov -->
 						</div>
 					</div>
 				</div>
@@ -117,17 +109,15 @@
 			<div class="panel panel-profile-assignment">
 				<div class="panel-body">
 					<div class="row">
-						<div class="col-sm-1">
-							<img src="http://placehold.it/40x40"> <!-- obrazok ulohy -->
-						</div>
-						<div class="col-sm-5">
-							<h5>Druhá úloha</h5> <!-- nazov ulohy --> <!-- TODO odkaz na ulohu -->
+						<div class="col-sm-6">
+							<img class="inline" src="http://placehold.it/40x40"> <!-- obrazok ulohy -->
+							<label class="inline" style="margin-left:10px">Druhá úloha</label> <!-- nazov ulohy --> <!-- TODO odkaz na ulohu -->
 						</div>
 						<div class="col-sm-4">
 							<img src="http://placehold.it/40x40"> <!-- trofej -->
 						</div>
 						<div class="col-sm-2">
-							<h5>-</h5> <!-- pocet bodov -->
+							<h5 style="margin-left: 10px">-</h5> <!-- pocet bodov -->
 						</div>
 					</div>
 				</div>
@@ -136,17 +126,15 @@
 			<div class="panel panel-profile-assignment">
 				<div class="panel-body">
 					<div class="row">
-						<div class="col-sm-1">
-							<img src="http://placehold.it/40x40"> <!-- obrazok ulohy -->
-						</div>
-						<div class="col-sm-5">
-							<h5>Druhá úloha</h5> <!-- nazov ulohy --> <!-- TODO odkaz na ulohu -->
+						<div class="col-sm-6">
+							<img class="inline" src="http://placehold.it/40x40"> <!-- obrazok ulohy -->
+							<label class="inline" style="margin-left:10px">Třetí úloha</label> <!-- nazov ulohy --> <!-- TODO odkaz na ulohu -->
 						</div>
 						<div class="col-sm-4">
 
 						</div>
 						<div class="col-sm-2">
-							<h5>-</h5> <!-- pocet bodov -->
+							<h5 style="margin-left: 10px">-</h5> <!-- pocet bodov -->
 						</div>
 					</div>
 				</div>
