--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -57,7 +57,7 @@
 			<hr>
 
 			<p id="profile-points-text">
-				Úspešný řešitel:
+				Úspěšný řešitel:
 			</p>
 			<div class="progress" style="margin-top:20px">
 				<div class="progress-bar progress-bar-warning progress-bar-ksi" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%">
@@ -66,7 +66,7 @@
 			</div>
 
 			<div style="margin-top:30px">
-				<h5>Výsledky</h5>
+				<h5>Odevzdané úkoly</h5>
 				<hr>
 			</div>
 
