--- a/app/templates/assignment.hbs
+++ b/app/templates/assignment.hbs
@@ -1,7 +1,9 @@
 <section id="novinky" class="container content-section" style="text-align:justify">
+
     <div class="row" style="margin-top: 30px">
-        <h2 id="name" style="color: black">Moje první úloha v ksi</h2>
+        <h2 id="name" style="color: black">Moje první úloha v ksi</h2> <!-- nazev ulohy -->
     </div>
+
     <!-- TODO: center name and image -->
     <div class="row" style="margin-top: 15px">
         <div class="col-xs-1 col-md-1">
