--- a/app/templates/header.hbs
+++ b/app/templates/header.hbs
@@ -29,7 +29,7 @@
                     {{#link-to "articles"}}Novinky{{/link-to}}
                 </li>
                 <li>
-                    {{#link-to "forum"}}Diskuze{{/link-to}}
+                    {{#link-to "forum"}}Diskuse{{/link-to}}
                 </li>
                 <li>
                     {{#link-to "faq"}}FAQ{{/link-to}}
