--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -10,7 +10,7 @@
 <section id="novinky" class="container content-section" style="text-align:justify">
     <!-- Sekcia noviniek -->
     <div class="jumbotron" style="background-color: transparent">
-        <div style="text-align: center; color: #39393a;"><h1>Novinky</h1></div> <!--TODO: dorobit obrazky a datum u noviniek + predelovace -->
+        <div class="caption-text" style="text-align: center;"><h1>Novinky</h1></div> <!--TODO: dorobit obrazky a datum u noviniek + predelovace -->
         <hr>
         {{articles-list model=model.articles}}
         {{#link-to "articles"}}Další novinky{{/link-to}}
