--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -1,7 +1,110 @@
 <section id="results" class="container content-section" style="text-align:justify">
 	<!-- Sekcia noviniek -->
-	<div class="jumbotron" style="background-color: transparent">
-	    <h1>Výsledky</h1>
-	    <p>Rád bys je viděl, co? Smůla!</p>
-	</div>
+  <h2>Výsledky</h2>
+	<table class="table table-striped">
+    <thead>
+      <tr style="height:45px">
+				<th style="text-align: center;">Pořadí</th>
+        <th>Jméno</th>
+        <th>Trofeje</th>
+        <th style="text-align: center;">Skóre</th>
+				<th style="text-align: center;">Počet vyřešených úloh</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr style="height:45px">
+				<td style="text-align: center;">1</td>
+        <td>Katka Šikovná</td> <!-- meno -->
+        <td>
+					<img src="http://placehold.it/30x30"> <!-- trofeje -->
+					<img src="http://placehold.it/30x30">
+					<img src="http://placehold.it/30x30">
+				</td>
+        <td style="text-align: center;">193</td> <!-- body -->
+				<td style="text-align: center;">15</td> <!-- pocet vyriesenych uloh -->
+      </tr>
+
+			<tr style="height:45px">
+				<td style="text-align: center;">2</td>
+        <td>Katka Šikovná</td> <!-- meno -->
+        <td>
+					<img src="http://placehold.it/30x30"> <!-- trofeje -->
+				</td>
+        <td style="text-align: center;">153</td> <!-- body -->
+				<td style="text-align: center;">12</td> <!-- pocet vyriesenych uloh -->
+      </tr>
+
+			<tr class="warning" style="height:45px">
+				<td style="text-align: center;">3</td>
+        <td>Franta Řešitel</td> <!-- meno -->
+        <td><!-- trofeje --></td>
+        <td style="text-align: center;">103</td> <!-- body -->
+				<td style="text-align: center;">10</td> <!-- pocet vyriesenych uloh -->
+      </tr>
+
+			<tr style="height:45px">
+				<td style="text-align: center;">4</td>
+        <td><!-- meno --></td>
+        <td><!-- trofeje --></td>
+        <td style="text-align: center;"><!-- body --></td>
+				<td style="text-align: center;"> <!-- pocet vyriesenych uloh --></td>
+      </tr>
+
+			<tr style="height:45px">
+				<td style="text-align: center;">5</td>
+        <td><!-- meno --></td>
+        <td><!-- trofeje --></td>
+        <td style="text-align: center;"><!-- body --></td>
+				<td style="text-align: center;"> <!-- pocet vyriesenych uloh --></td>
+      </tr>
+
+			<tr style="height:45px">
+				<td style="text-align: center;">6</td>
+        <td><!-- meno --></td>
+        <td><!-- trofeje --></td>
+        <td style="text-align: center;"><!-- body --></td>
+				<td style="text-align: center;"> <!-- pocet vyriesenych uloh --></td>
+      </tr>
+
+			<tr style="height:45px">
+				<td style="text-align: center;">7</td>
+        <td><!-- meno --></td>
+        <td><!-- trofeje --></td>
+        <td style="text-align: center;"><!-- body --></td>
+				<td style="text-align: center;"> <!-- pocet vyriesenych uloh --></td>
+      </tr>
+
+			<tr style="height:45px">
+				<td style="text-align: center;">8</td>
+        <td><!-- meno --></td>
+        <td><!-- trofeje --></td>
+        <td style="text-align: center;"><!-- body --></td>
+				<td style="text-align: center;"> <!-- pocet vyriesenych uloh --></td>
+      </tr>
+
+			<tr style="height:45px">
+				<td style="text-align: center;">9</td>
+        <td><!-- meno --></td>
+        <td><!-- trofeje --></td>
+        <td style="text-align: center;"><!-- body --></td>
+				<td style="text-align: center;"> <!-- pocet vyriesenych uloh --></td>
+      </tr>
+
+			<tr style="height:45px">
+				<td style="text-align: center;">10</td>
+        <td><!-- meno --></td>
+        <td><!-- trofeje --></td>
+        <td style="text-align: center;"><!-- body --></td>
+				<td style="text-align: center;"> <!-- pocet vyriesenych uloh --></td>
+      </tr>
+
+			<tr style="height:45px">
+				<td style="text-align: center;">11</td>
+        <td><!-- meno --></td>
+        <td><!-- trofeje --></td>
+        <td style="text-align: center;"><!-- body --></td>
+				<td style="text-align: center;"> <!-- pocet vyriesenych uloh --></td>
+      </tr>
+    </tbody>
+  </table>
 </section>
