Assignments navigation works!

--- a/app/templates/header.hbs
+++ b/app/templates/header.hbs
@@ -20,7 +20,7 @@
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right" style="height: 50px">
                 <li>
-                    {{#link-to "assignments"}}Úlohy{{/link-to}}
+                    {{#link-to "tasks"}}Úlohy{{/link-to}}
                 </li>
                 <li>
                     {{#link-to "results"}}Výsledky{{/link-to}}
