--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,6 @@
 <div id="ksi-photo" class="container-fluid">
     <div class="text-center">
-        {{#link-to "assignments" type="button" class="btn btn-primary btn-lg the-button"}}
+        {{#link-to "tasks" type="button" class="btn btn-primary btn-lg the-button"}}
         <h3>Začni řešit</h3>
         {{/link-to}}
     </div>
