Big internal changes, profile implemented

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,6 @@
 <div id="wrapper">
     <div id="header">
-        {{render "header"}}
+        {{header-component model=model}}
     </div>
 
     <div id="content">
