--- a/app/templates/registration.hbs
+++ b/app/templates/registration.hbs
@@ -3,6 +3,7 @@
 	<div class="jumbotron" style="background-color: transparent">
 	    <h1>Výsledky</h1>
 	    <p>Rád bys je viděl, co? Smůla!</p>
-			<p>Honzo preco su pod registraciou vysledky? O.o</p>
+		<p>Honzo preco su pod registraciou vysledky? O.o</p>
+		<p>Protože jsem blbec a nezměnil jsem template! Můžeš ten template klidně předělat!</p>
 	</div>
 </section>
