--- a/app/templates/forum.hbs
+++ b/app/templates/forum.hbs
@@ -1,7 +1,154 @@
 <section id="faq" class="container content-section" style="text-align:justify">
-	<!-- Sekcia noviniek -->
-	<div class="jumbotron" style="background-color: transparent">
-	    <h1>Diskuse</h1>
-	    <p>Pusto, pusto, pusto...</p>
+	<!-- Sekcia -->
+	<div style="margin:40px;">
+		<h2>Diskuse k úlohám</h2>
+		<table class="table table-striped table-hover-forum ">
+	    <thead>
+	      <tr style="height:45px">
+	        <th>Název vlákna</th>
+	        <th style="text-align: center;">Počet příspěvků</th>
+	        <th style="text-align: center;">Počet nečtených</th>
+					<!-- TODO? <th style="text-align: center;">Posledný příspěvek</th> -->
+	      </tr>
+	    </thead>
+	    <tbody>
+	      <tr>
+	        <td>
+						<h5 class="caption-text">
+							<img src="http://placehold.it/35x35" style="margin-right: 15px"> <!-- obrazek ulohy -->
+							Moje první úloha v ksi <!-- meno vlakna/ulohy - link na vlakno -->
+						</h5>
+					</td>
+	        <td style="text-align: center;"><span class="badge">15</span></td> <!-- Počet příspěvků -->
+					<td style="text-align: center;"><span class="badge ksi-badge" >3</span></td> <!-- Počet nečtených -->
+					<!-- <td style="text-align: center;"> <!- - Posledný príspevok - ->
+						Jirka Jiží:  				<!- - Meno autora prispevku - ->
+						Nemám tě rád!				<!- - Text prispevku max 2 riadky- ->
+						<div id="date-text">00:00:00 1.1.2015</div>		<!- - Cas prispevku - ->
+					</td> -->
+	      </tr>
+
+				<tr>
+	        <td>
+						<h5 class="caption-text">
+							<img src="http://placehold.it/35x35" style="margin-right: 15px"> <!-- obrazek ulohy -->
+							Moje první úloha v ksi <!-- meno vlakna/ulohy - link na vlakno -->
+						</h5>
+					</td>
+	        <td style="text-align: center;"><span class="badge">15</span></td> <!-- Počet příspěvků -->
+					<td style="text-align: center;"><span class="badge ksi-badge" >3</span></td> <!-- Počet nečtených -->
+					<!-- <td style="text-align: center;"> <!- - Posledný príspevok - ->
+						Jirka Jiží:  				<!- - Meno autora prispevku - ->
+						Nemám tě rád!				<!- - Text prispevku max 2 riadky- ->
+						<div id="date-text">00:00:00 1.1.2015</div>		<!- - Cas prispevku - ->
+					</td> -->
+	      </tr>
+	    </tbody>
+	  </table>	<!-- zobrazovat max 10 vlakien? -->
+
+		<div class="text-center"> <!-- TODO colors -->
+			<ul class="pagination pagination-forum">
+			 <li><a href="#">1</a></li>
+			 <li class="active"><a href="#">2</a></li>
+			 <li><a href="#">3</a></li>
+			 <li><a href="#">4</a></li>
+			 <li><a href="#">5</a></li>
+			</ul>
+		</div>
+
+	</div>
+
+	<div style="margin:40px;">
+		<h2>Hlavní diskuse</h2>
+		<table class="table table-striped table-hover-forum ">
+	    <thead>
+	      <tr style="height:45px">
+	        <th>Název vlákna</th>
+	        <th style="text-align: center;">Počet příspěvků</th>
+	        <th style="text-align: center;">Počet nečtených</th>
+					<!-- TODO? <th style="text-align: center;">Posledný příspěvek</th> -->
+	      </tr>
+	    </thead>
+	    <tbody>
+	      <tr>
+	        <td>
+						<h5 class="caption-text">
+							<img src="http://placehold.it/35x35" style="margin-right: 15px"> <!-- obrazek ulohy -->
+							Problémy <!-- meno vlakna/ulohy - link na vlakno -->
+						</h5>
+					</td>
+	        <td style="text-align: center;"><span class="badge">15</span></td> <!-- Počet příspěvků -->
+					<td style="text-align: center;"><span class="badge ksi-badge" >3</span></td> <!-- Počet nečtených -->
+					<!-- <td style="text-align: center;"> <!- - Posledný príspevok - ->
+						Jirka Jiží:  				<!- - Meno autora prispevku - ->
+						Nemám tě rád!				<!- - Text prispevku max 2 riadky- ->
+						<div id="date-text">00:00:00 1.1.2015</div>		<!- - Cas prispevku - ->
+					</td> -->
+	      </tr>
+
+				<tr>
+	        <td>
+						<h5 class="caption-text">
+							<img src="http://placehold.it/35x35" style="margin-right: 15px"> <!-- obrazek ulohy -->
+							FAQ <!-- meno vlakna/ulohy - link na vlakno -->
+						</h5>
+					</td>
+	        <td style="text-align: center;"><span class="badge">15</span></td> <!-- Počet příspěvků -->
+					<td style="text-align: center;"><span class="badge ksi-badge" >3</span></td> <!-- Počet nečtených -->
+					<!-- <td style="text-align: center;"> <!- - Posledný príspevok - ->
+						Jirka Jiží:  				<!- - Meno autora prispevku - ->
+						Nemám tě rád!				<!- - Text prispevku max 2 riadky- ->
+						<div id="date-text">00:00:00 1.1.2015</div>		<!- - Cas prispevku - ->
+					</td> -->
+	      </tr>
+
+				<tr>
+	        <td>
+						<h5 class="caption-text">
+							<img src="http://placehold.it/35x35" style="margin-right: 15px"> <!-- obrazek ulohy -->
+							Python <!-- meno vlakna/ulohy - link na vlakno -->
+						</h5>
+					</td>
+	        <td style="text-align: center;"><span class="badge">15</span></td> <!-- Počet příspěvků -->
+					<td style="text-align: center;"><span class="badge ksi-badge" >3</span></td> <!-- Počet nečtených -->
+					<!-- <td style="text-align: center;"> <!- - Posledný príspevok - ->
+						Jirka Jiží:  				<!- - Meno autora prispevku - ->
+						Nemám tě rád!				<!- - Text prispevku max 2 riadky- ->
+						<div id="date-text">00:00:00 1.1.2015</div>		<!- - Cas prispevku - ->
+					</td> -->
+	      </tr>
+	    </tbody>
+	  </table> <!-- zobrazovat max 10 vlakien? -->
+
+		<div class="text-center">
+			<ul class="pagination pagination-forum"> <!-- TODO colors -->
+			 <li><a href="#">1</a></li>
+			 <li class="active"><a href="#">2</a></li>
+			 <li><a href="#">3</a></li>
+			 <li><a href="#">4</a></li>
+			 <li><a href="#">5</a></li>
+			</ul>
+		</div>
+
+	</div>
+
+	<div style="margin:40px;">
+		<button class="btn btn-primary" style="margin:20px">Nové vlákno</button> <!-- otvori/skryje nasledujuci panel -->
+
+		<div class="panel panel-default">
+			<form class="form-horizontal" style="margin:30px">
+        <div class="controls form-inline">
+            <label for="threadName">Název:</label>
+            <input type="text" class="form-control" style="min-width: 100%" id="threadName">
+        </div>
+				<div class="controls form-inline" style="margin-top:20px">
+						<label for="threadName">Příspěvek:</label>
+						<textarea class="form-control" style="min-width: 100%" rows="3"></textarea>
+				</div>
+				<!-- TODO: textarea na http://www.tinymce.com/ -->
+				<button class="btn btn-primary" style="margin-top:20px">Odeslat</button>
+			</form>
+		</div>
+
 	</div>
 </section>
