--- a/app/styles/components/panels.scss
+++ b/app/styles/components/panels.scss
@@ -34,3 +34,7 @@
   border-style: solid;
   border-color: ksi-color-level('primary-dark',9);
 }
+
+.panel-task {
+  background: ksi-color-level('primary-orange', 8);
+}
