--- a/app/templates/forum.hbs
+++ b/app/templates/forum.hbs
@@ -47,12 +47,14 @@
 	  </table>	<!-- zobrazovat max 10 vlakien? -->
 
 		<div class="text-center"> <!-- TODO colors -->
-			<ul class="pagination pagination-forum">
-			 <li><a href="#">1</a></li>
-			 <li class="active"><a href="#">2</a></li>
+			<ul class="pagination">
+			 <li><a href="#">&laquo;</a></li>
+			 <li class="active"><a href="#">1</a></li>
+			 <li><a href="#">2</a></li>
 			 <li><a href="#">3</a></li>
 			 <li><a href="#">4</a></li>
 			 <li><a href="#">5</a></li>
+			 <li><a href="#">&raquo;</a></li>
 			</ul>
 		</div>
 
@@ -121,7 +123,7 @@
 	  </table> <!-- zobrazovat max 10 vlakien? -->
 
 		<div class="text-center">
-			<ul class="pagination pagination-forum"> <!-- TODO colors -->
+			<ul class="pagination"> <!-- TODO colors -->
 			 <li><a href="#">1</a></li>
 			 <li class="active"><a href="#">2</a></li>
 			 <li><a href="#">3</a></li>
