--- a/app/styles/components/pagination.scss
+++ b/app/styles/components/pagination.scss
@@ -1,3 +1,58 @@
-.pagination-forum {
-    color: ksi-color('primary-orange');
+/* ------- pagination -------- */
+.pagination ul > li > a, .pagination ul > li > span {
+  border: none;
+}
+.pagination {
+  height: 50px;
+}
+
+.pagination > ul {
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.pagination li {
+  display: inline;
+}
+
+.pagination li:first-child a {
+  border-left-width: 1px;
+  -webkit-border-radius: 3px 0 0 3px;
+  -moz-border-radius: 3px 0 0 3px;
+  border-radius: 3px 0 0 3px;
+}
+
+.pagination li:last-child a {
+  -webkit-border-radius: 0 3px 3px 0;
+  -moz-border-radius: 0 3px 3px 0;
+  border-radius: 0 3px 3px 0;
+}
+
+.pagination a {
+  float: left;
+  padding: 0 14px;
+  line-height: 34px;
+  border: 1px solid ksi-color('primary-orange');
+  border-left-width: 0;
+}
+
+.pagination a:hover, .active a {
+  background-color: ksi-color-level('primary-orange', 8);
+}
+
+.disabled a, .disabled a:hover,
+.active a, .active a:hover {
+  color: ksi-color('primary-orange');
+  cursor: default;
+}
+
+.disabled a:hover {
+  background-color: ksi-color('primary-orange');
 }
