--- a/app/templates/components/header-component.hbs
+++ b/app/templates/components/header-component.hbs
@@ -1,8 +1,8 @@
 <!-- header content -->
-<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-main navbar-fixed-top" role="navigation">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header page-scroll">
+        <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
@@ -17,7 +17,7 @@
             {{/link-to}}
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <div class="collapse navbar-collapse in" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right" style="height: 50px">
                 <li>
                     {{#link-to "tasks"}}Úlohy{{/link-to}}
@@ -55,7 +55,7 @@
                       <li><a href="#">Odhlásit se</a></li>
                     </ul>
                   </li>
-                {{else}} 
+                {{else}}
                   <li>
                       <form action="login.html">
                           {{#link-to "login"}}
