--- a/app/templates/task/assignment.hbs
+++ b/app/templates/task/assignment.hbs
@@ -1,1 +1,51 @@
-Index!
+<div>
+  <div style="margin:20px">
+      textove zadanie ulohy <!-- textove zadanie -->
+  </div>
+  <div style="margin:20px">
+    <button class="btn btn-primary">Stáhnout pdf</button>
+  </div>
+  <!-- styl odovzdavania -->
+  <!-- TMP Python -->
+  <hr>
+  <div class="controls" style="margin:20px">
+      <label for="threadName">Python konzola:</label>
+      <textarea class="form-control" style="min-width: 100%" rows="3"></textarea>
+  </div>
+  <div class="row" style="margin:20px">
+      <button class="btn-sm btn-default inline">Nahrát .py soubor</button>
+      <button class="btn-sm btn-default inline">Spusti</button>
+  </div>
+  <!-- abcd odovzdavanie -->
+  <!--<hr>
+  <div class="controls" style="margin:20px">
+    <div class="panel panel-task">
+      <div class="panel-body">
+        <div class="checkbox">
+         <label><input type="checkbox" value="">Option 1</label>
+        </div>
+        <div class="checkbox">
+         <label><input type="checkbox" value="">Option 2</label>
+        </div>
+        <div class="checkbox disabled">
+         <label><input type="checkbox" value="">Option 3</label>
+        </div>
+        <div class="checkbox disabled">
+         <label><input type="checkbox" value="">Option 4</label>
+        </div>
+      </div>
+    </div>
+    <div style="margin-top:20px">
+      <button class="btn btn-primary">Odpovědět</button>
+    </div>
+  </div>-->
+  <!-- vseobecne odovzdanie -->
+  <hr>
+  <div class="alert alert-warning" role="alert" style="margin:20px">
+    <!-- TODO color poznamky -->
+    <strong>Poznámka:</strong> odevzdávejte všechny vaše soubory řešení v jediném zip souboru. <!-- TODO odkaz na clanek, ako odevzdavat ukoly -->
+  </div>
+  <div style="margin:20px">
+    <button class="btn btn-primary">Nahrát a odevzdát zip</button>
+  </div>
+</div>
