--- a/app/templates/task/submission.hbs
+++ b/app/templates/task/submission.hbs
@@ -1,1 +1,24 @@
-Odevzdání!
+<table class="table table-striped table-hover-forum ">
+  <thead>
+    <tr style="height:45px">
+      <th style="text-align: center;">#</th>
+      <th style="text-align: center;">Čas odevzdání</th>
+      <th>Soubory</th>
+      <th>Trofeje</th>
+      <th style="text-align: center;">Skóre</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td style="text-align: center;">1</td> <!-- index odovzdania -->
+      <td style="text-align: center;">10.10.2015 00:00:00</td> <!-- cas odovzdania -->
+      <td>uloha1.zip</td> <!-- odovzdany subor --><!-- TODO link na stiahnutie suboru -->
+      <td>
+        <img src="http://placehold.it/30x30"> <!-- ziskane trofeje po oprave, ma to tu byt? nenechame to len vo vysledkoch? -->
+      </td>
+      <td style="text-align: center;"> <!-- ziskane body po oprave, ma to tu byt? nenechame to len vo vysledkoch? -->
+        10
+      </td>
+    </tr>
+  </tbody>
+</table>
