--- a/app/templates/task/statistics.hbs
+++ b/app/templates/task/statistics.hbs
@@ -1,1 +1,29 @@
-Statistiky
+<table class="table table-striped">
+  <thead>
+    <tr style="height:45px">
+      <th style="text-align: center;">Pořadí</th>
+      <th>Jméno</th>
+      <th>Trofeje</th>
+      <th style="text-align: center;">Skóre</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr style="height:45px">
+      <td style="text-align: center;">1</td>
+      <td>Katka Šikovná</td> <!-- meno -->
+      <td>
+        <img src="http://placehold.it/30x30"> <!-- trofeje -->
+        <img src="http://placehold.it/30x30">
+        <img src="http://placehold.it/30x30">
+      </td>
+      <td style="text-align: center;">193</td> <!-- body -->
+    </tr>
+
+    <tr class="warning" style="height:45px">
+      <td style="text-align: center;">2</td>
+      <td>Franta Řešitel</td> <!-- meno -->
+      <td><!-- trofeje --></td>
+      <td style="text-align: center;">103</td> <!-- body -->
+    </tr>
+  </tbody>
+</table>
