--- a/app/templates/task/solution.hbs
+++ b/app/templates/task/solution.hbs
@@ -1,1 +1,12 @@
-Řešení!
+<div style="margin:20px">
+  Text reseni <!-- text reseni -->
+</div>
+<hr>
+<div>
+  <div class="panel panel-ksi">
+    <div class="panel-heading panel-heading-ksi">Komentář ku tvému řešení:</div>
+    <div class="panel-body">
+      komentár <!-- komentar k rieseniu od orga -->
+    </div>
+  </div>
+</div>
