--- a/app/templates/task/discussion.hbs
+++ b/app/templates/task/discussion.hbs
@@ -1,1 +1,74 @@
-Diskuze!
+<ul class="media-list" style="margin:20px">
+
+  <li class="media"> <!-- pociatok prispevku -->
+    <div class="media-left">
+        <img class="media-object" src="http://placehold.it/50x50"> <!-- foto autora prispevku -->
+    </div>
+    <div class="media-body">
+      <div class="discussion-caption">Adam Obrtel, řešitel, 27.3.2015 11:09</div> <!-- meno, status, cas-->
+      Prispevok -- Lorem ipsum dolor sit amet, ne mundi laoreet mei, no his
+      lorem etiam. Iracundia cotidieque efficiantur cum eu, lucilius intellegat
+      cu qui. Per et choro vivendo, pro no dolore ubique. Nam ea augue erant principes.
+      <br>
+      Ex ius diceret accusata. Aeque phaedrum expetenda eu mei, qualisque voluptaria
+      consectetuer et usu. At inermis suscipit vix. In est wisi denique posidonium,
+      in debet maluisset reprimique mel. Veniam vocibus referrentur te qui, postea
+      copiosae scribentur mei ei. Pro te vivendo perfecto electram,
+      justo legendos et sit, quo id epicurei interpretaris.
+      <div>
+        <button class="btn-xs btn-primary" style="border:none; margin-top: 10px">Reagovat</button>
+      </div>
+      <!-- button odkryje textareau: -->
+      <div class="panel panel-default" style="border:none; box-shadow: none;">
+  				<div class="controls form-inline" style="margin-top:10px">
+  						<label for="threadName">Příspěvek:</label>
+  						<textarea class="form-control" style="min-width: 100%" rows="3"></textarea>
+  				</div>
+  				<!-- TODO: textarea na http://www.tinymce.com/ -->
+  				<button class="btn btn-sm btn-primary" style="margin-top:20px">Odeslat</button>
+  		</div>
+      <!-- vnorena reakcia -->
+      <li class="media">
+        <div class="media-left">
+            <img class="media-object" src="http://placehold.it/50x50"> <!-- foto autora prispevku -->
+        </div>
+        <div class="media-body">
+          <div class="discussion-caption">Adam Obrtel, řešitel, 27.3.2015 11:09</div> <!-- meno, status, cas-->
+          Prispevok -- Lorem ipsum dolor sit amet, ne mundi laoreet mei, no his
+          lorem etiam. Iracundia cotidieque efficiantur cum eu, lucilius intellegat
+          cu qui. Per et choro vivendo, pro no dolore ubique. Nam ea augue erant principes.
+          <br>
+          Ex ius diceret accusata. Aeque phaedrum expetenda eu mei, qualisque voluptaria
+          consectetuer et usu. At inermis suscipit vix. In est wisi denique posidonium,
+          in debet maluisset reprimique mel. Veniam vocibus referrentur te qui, postea
+          copiosae scribentur mei ei. Pro te vivendo perfecto electram,
+          justo legendos et sit, quo id epicurei interpretaris.
+          <div>
+            <button class="btn-xs btn-primary" style="border:none; margin-top: 10px">Reagovat</button>
+          </div>
+        </div>
+      </li>
+    </div>
+  </li>
+  <!-- novy prispevok -->
+  <li class="media">
+    <div class="media-left">
+        <img class="media-object" src="http://placehold.it/50x50"> <!-- foto autora prispevku -->
+    </div>
+    <div class="media-body">
+      <div class="discussion-caption">Adam Obrtel, řešitel, 27.3.2015 11:09</div> <!-- meno, status, cas-->
+      Prispevok -- Lorem ipsum dolor sit amet, ne mundi laoreet mei, no his
+      lorem etiam. Iracundia cotidieque efficiantur cum eu, lucilius intellegat
+      cu qui. Per et choro vivendo, pro no dolore ubique. Nam ea augue erant principes.
+      <br>
+      Ex ius diceret accusata. Aeque phaedrum expetenda eu mei, qualisque voluptaria
+      consectetuer et usu. At inermis suscipit vix. In est wisi denique posidonium,
+      in debet maluisset reprimique mel. Veniam vocibus referrentur te qui, postea
+      copiosae scribentur mei ei. Pro te vivendo perfecto electram,
+      justo legendos et sit, quo id epicurei interpretaris.
+      <div>
+        <button class="btn-xs btn-primary" style="border:none; margin-top: 10px">Reagovat</button>
+      </div>
+    </div>
+  </li>
+</ul>
