--- a/app/templates/task/solution.hbs
+++ b/app/templates/task/solution.hbs
@@ -4,7 +4,7 @@
 <hr>
 <div>
   <div class="panel panel-ksi">
-    <div class="panel-heading panel-heading-ksi">Komentář ku tvému řešení:</div>
+    <div class="panel-heading panel-heading-ksi">Komentář ke tvému řešení:</div>
     <div class="panel-body">
       komentár <!-- komentar k rieseniu od orga -->
     </div>
