--- a/app/templates/task.hbs
+++ b/app/templates/task.hbs
@@ -4,12 +4,8 @@
     </div>
     <!-- TODO: center name and image -->
     <div class="row" style="margin-top: 15px">
-        <div class="col-xs-1 col-md-1">
-            <img id="org-photo" src="{{model.author.profile_pic}}" style="width: 50px">
-        </div>
-        <div class="col-xs-11 col-md-11">
-            <h4 id="org-name"  style="color: #39393a">{{model.author.full_name}}</h4>
-        </div>
+      <img id="org-photo" class="inline" src="{{model.author.profile_pic}}" style="width: 50px">
+      <h4 id="org-name" class="inline" style="color: #39393a">{{model.author.full_name}}</h4>
     </div>
     <div class="row" style="margin-top: 20px">
         <nav class="navbar navbar-uloha" role="navigation">
