articles - big pictures

--- a/app/templates/article.hbs
+++ b/app/templates/article.hbs
@@ -1,8 +1,8 @@
 <section id="novinky" class="container content-section" style="text-align:justify">
     <div class="panel panel-article" style="margin-top:30px">
       <div class="panel-heading panel-heading-article">
+        <img src="http://placehold.it/1600x250" style="width: 100%">
         <h1 id="name">
-          <img src="http://placehold.it/50x50">
           {{model.title}}
         </h1>
       </div>
