--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -10,6 +10,7 @@
 			<div id="name">
 				<p id="profile-text">{{model.short_info}}</p>
 			</div>
+			<!-- TODO: chceme sem odkaze na FB, Twitter, web? -->
 			<div class="panel panel-profile" style="margin-top:30px">
 				<div class="panel-body">
 					<h6><span class="glyphicon glyphicon-education" aria-hidden="true"></span> {{model.school_name}}</h6>
