--- a/app/styles/layout/navbar-main.scss
+++ b/app/styles/layout/navbar-main.scss
@@ -2,65 +2,65 @@
 .navbar-btn{
      margin-left:10px;
 }
-.navbar-main {
+.navbar-default {
     background-color: ksi-color('primary-dark');
     border-color: ksi-color('primary-dark');
     border-bottom: $border-h-width solid ksi-color('primary-orange');
 }
-.navbar-main .navbar-brand {
+.navbar-default .navbar-brand {
     color: ksi-color('text-light');
 }
-.navbar-main .navbar-brand:hover, .navbar-main .navbar-brand:focus {
+.navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
     color: ksi-color('primary-orange');
 }
-.navbar-main .navbar-text {
+.navbar-default .navbar-text {
     color: ksi-color('text-light');
 }
-.navbar-main .navbar-nav > li > a {
+.navbar-default .navbar-nav > li > a {
     color: ksi-color('text-light');
 }
-.navbar-main .navbar-nav > li > a:hover, .navbar-main .navbar-nav > li > a:focus {
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
     color: ksi-color('primary-orange');
 }
-.navbar-main .navbar-nav > li > .dropdown-menu {
+.navbar-default .navbar-nav > li > .dropdown-menu {
     background-color: ksi-color('primary-dark');
 }
-.navbar-main .navbar-nav > li > .dropdown-menu > li > a {
+.navbar-default .navbar-nav > li > .dropdown-menu > li > a {
     color: ksi-color('primary-orange');
 }
-.navbar-main .navbar-nav > li > .dropdown-menu > li > a:hover,
-.navbar-main .navbar-nav > li > .dropdown-menu > li > a:focus {
-    color: ksi-color('primary-orange');
-    background-color: ksi-color('primary-dark');
-}
-.navbar-main .navbar-nav > li > .dropdown-menu > li > .divider {
-    background-color: ksi-color('primary-dark');
-}
-.navbar-main .navbar-nav > .active > a, .navbar-main .navbar-nav > .active > a:hover, .navbar-main .navbar-nav > .active > a:focus {
+.navbar-default .navbar-nav > li > .dropdown-menu > li > a:hover,
+.navbar-default .navbar-nav > li > .dropdown-menu > li > a:focus {
     color: ksi-color('primary-orange');
     background-color: ksi-color('primary-dark');
 }
-.navbar-main .navbar-nav > .open > a, .navbar-main .navbar-nav > .open > a:hover, .navbar-main .navbar-nav > .open > a:focus {
+.navbar-default .navbar-nav > li > .dropdown-menu > li > .divider {
+    background-color: ksi-color('primary-dark');
+}
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
     color: ksi-color('primary-orange');
     background-color: ksi-color('primary-dark');
 }
-.navbar-main .navbar-toggle {
+.navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
+    color: ksi-color('primary-orange');
+    background-color: ksi-color('primary-dark');
+}
+.navbar-default .navbar-toggle {
     border-color: ksi-color('primary-dark');
 }
-.navbar-main .navbar-toggle:hover, .navbar-main .navbar-toggle:focus {
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
     background-color: ksi-color('primary-dark');
 }
-.navbar-main .navbar-toggle .icon-bar {
+.navbar-default .navbar-toggle .icon-bar {
     background-color: ksi-color('text-light');
 }
-.navbar-main .navbar-collapse,
-.navbar-main .navbar-form {
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
     border-color: ksi-color('text-light');
 }
-.navbar-main .navbar-link {
+.navbar-default .navbar-link {
     color: ksi-color('text-light');
 }
-.navbar-main .navbar-link:hover {
+.navbar-default .navbar-link:hover {
     color: ksi-color('primary-orange');
 }
 
@@ -76,13 +76,13 @@
         padding: 0;
         margin-top: 5px;
     }
-    .navbar-main .navbar-nav .open .dropdown-menu > li > a {
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a {
         color: ksi-color('text-light');
     }
-    .navbar-main .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-main .navbar-nav .open .dropdown-menu > li > a:focus {
+    .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
         color: ksi-color('primary-orange');
     }
-    .navbar-main .navbar-nav .open .dropdown-menu > .active > a, .navbar-main .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-main .navbar-nav .open .dropdown-menu > .active > a:focus {
+    .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
         color: ksi-color('primary-orange');
         background-color: ksi-color('primary-dark');
     }
