--- a/app/templates/components/header-component.hbs
+++ b/app/templates/components/header-component.hbs
@@ -1,5 +1,5 @@
 <!-- header content -->
-<nav class="navbar navbar-main navbar-fixed-top" role="navigation">
+<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
     <div class="container">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
