--- a/app/styles/layout/table.scss
+++ b/app/styles/layout/table.scss
@@ -9,3 +9,12 @@
 .table-hover-forum tbody tr:hover td, .table-hover tbody tr:hover th {
   background-color: ksi-color-level('primary-orange', 8);
 }
+
+tbody {
+	counter-reset: numcounter;
+}
+
+.numbering::before {
+	counter-increment: numcounter;
+	content: counter(numcounter);
+}
