--- a/app/templates/components/articles-list.hbs
+++ b/app/templates/components/articles-list.hbs
@@ -1,7 +1,7 @@
 {{#each model as |article|}}
     <div class="media" style="margin-top:20px">
       <div class="media-left">
-        	<img src="http://placehold.it/250x250"> <!-- TODO obrazok link -->
+        	<img src="{{article.pic}}" style="width: 250px">
       </div>
       <div class="media-body">
         <h3 id="name">
