--- a/app/templates/results.hbs
+++ b/app/templates/results.hbs
@@ -12,99 +12,19 @@
       </tr>
     </thead>
     <tbody>
-      <tr style="height:45px">
-				<td style="text-align: center;">1</td>
-        <td>Katka Šikovná</td> <!-- meno -->
-        <td>
-					<img src="http://placehold.it/30x30"> <!-- trofeje -->
-					<img src="http://placehold.it/30x30">
-					<img src="http://placehold.it/30x30">
-				</td>
-        <td style="text-align: center;">193</td> <!-- body -->
-				<td style="text-align: center;">15</td> <!-- pocet vyriesenych uloh -->
-      </tr>
-
-			<tr style="height:45px">
-				<td style="text-align: center;">2</td>
-        <td>Katka Šikovná</td> <!-- meno -->
-        <td>
-					<img src="http://placehold.it/30x30"> <!-- trofeje -->
-				</td>
-        <td style="text-align: center;">153</td> <!-- body -->
-				<td style="text-align: center;">12</td> <!-- pocet vyriesenych uloh -->
-      </tr>
-
-			<tr class="warning" style="height:45px">
-				<td style="text-align: center;">3</td>
-        <td>Franta Řešitel</td> <!-- meno -->
-        <td><!-- trofeje --></td>
-        <td style="text-align: center;">103</td> <!-- body -->
-				<td style="text-align: center;">10</td> <!-- pocet vyriesenych uloh -->
-      </tr>
-
-			<tr style="height:45px">
-				<td style="text-align: center;">4</td>
-        <td><!-- meno --></td>
-        <td><!-- trofeje --></td>
-        <td style="text-align: center;"><!-- body --></td>
-				<td style="text-align: center;"> <!-- pocet vyriesenych uloh --></td>
-      </tr>
-
-			<tr style="height:45px">
-				<td style="text-align: center;">5</td>
-        <td><!-- meno --></td>
-        <td><!-- trofeje --></td>
-        <td style="text-align: center;"><!-- body --></td>
-				<td style="text-align: center;"> <!-- pocet vyriesenych uloh --></td>
-      </tr>
-
-			<tr style="height:45px">
-				<td style="text-align: center;">6</td>
-        <td><!-- meno --></td>
-        <td><!-- trofeje --></td>
-        <td style="text-align: center;"><!-- body --></td>
-				<td style="text-align: center;"> <!-- pocet vyriesenych uloh --></td>
-      </tr>
-
-			<tr style="height:45px">
-				<td style="text-align: center;">7</td>
-        <td><!-- meno --></td>
-        <td><!-- trofeje --></td>
-        <td style="text-align: center;"><!-- body --></td>
-				<td style="text-align: center;"> <!-- pocet vyriesenych uloh --></td>
-      </tr>
-
-			<tr style="height:45px">
-				<td style="text-align: center;">8</td>
-        <td><!-- meno --></td>
-        <td><!-- trofeje --></td>
-        <td style="text-align: center;"><!-- body --></td>
-				<td style="text-align: center;"> <!-- pocet vyriesenych uloh --></td>
-      </tr>
-
-			<tr style="height:45px">
-				<td style="text-align: center;">9</td>
-        <td><!-- meno --></td>
-        <td><!-- trofeje --></td>
-        <td style="text-align: center;"><!-- body --></td>
-				<td style="text-align: center;"> <!-- pocet vyriesenych uloh --></td>
-      </tr>
-
-			<tr style="height:45px">
-				<td style="text-align: center;">10</td>
-        <td><!-- meno --></td>
-        <td><!-- trofeje --></td>
-        <td style="text-align: center;"><!-- body --></td>
-				<td style="text-align: center;"> <!-- pocet vyriesenych uloh --></td>
-      </tr>
-
-			<tr style="height:45px">
-				<td style="text-align: center;">11</td>
-        <td><!-- meno --></td>
-        <td><!-- trofeje --></td>
-        <td style="text-align: center;"><!-- body --></td>
-				<td style="text-align: center;"> <!-- pocet vyriesenych uloh --></td>
-      </tr>
+      {{#each model as |user|}}
+        <tr style="height:45px">
+  				<td class="numbering" style="text-align: center;"></td>
+          <td>{{user.full_name}}</td> <!-- meno -->
+          <td>
+            {{#each user.achievements as |achievement|}}
+    					{{achievement-small model=achievement}}
+            {{/each}}
+  				</td>
+          <td style="text-align: center;">{{user.score}}</td> <!-- body -->
+  				<td style="text-align: center;">{{user.tasks_num}}</td> <!-- pocet vyriesenych uloh -->
+        </tr>
+      {{/each}}
     </tbody>
   </table>
 </section>
