--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,6 +1,9 @@
 <div id="wrapper">
     <div id="header">
         {{header-component model=model}}
+        {{#if false}} <!-- admin logged -->
+          {{header-admin model=model}}
+        {{/if}}
     </div>
 
     <div id="content">
