--- a/app/templates/components/achievement-small.hbs
+++ b/app/templates/components/achievement-small.hbs
@@ -1,1 +1,2 @@
-<img src="{{model.pic}}" alt="{{model.title}}">
+<img src="img/achievement-unknown.png" width="30px;"/>
+<!--<img src="{{model.pic}}" alt="{{model.title}}">-->
