--- a/app/templates/components/articles-list.hbs
+++ b/app/templates/components/articles-list.hbs
@@ -1,7 +1,11 @@
 {{#each model as |article|}}
     <div class="media" style="margin-top:20px">
       <div class="media-left">
-        	<img src="http://placehold.it/250x250"> <!-- TODO obrazok link -->
+        {{#if false}}
+          <!-- TODO obrazok link -->
+        {{else}}
+          <img src="img/article-new-web.png" width="250px" height="250px"/>
+        {{/if}}
       </div>
       <div class="media-body">
         <h3 id="name">
