--- a/app/templates/profile.hbs
+++ b/app/templates/profile.hbs
@@ -2,7 +2,11 @@
 	<div class="row">
 	  <div class="col-xs-5 col-md-3">
 			<div style="margin-top:30px">
-				<img src="{{model.profile_pic}}">
+				{{#if false}} <!-- TODO have profile picture -->
+					<img src="{{model.profile_pic}}"/>
+				{{else}}
+					<img src="img/box-ksi.png" style="max-width:250px;"/>
+				{{/if}}
 			</div>
 			<div id="name" style="margin-top:30px; margin-left:5px">
 				<h3>{{model.name}}</h3>
