Add cytoscape dependency

--- a/app/templates/tasks.hbs
+++ b/app/templates/tasks.hbs
@@ -1,3 +1,11 @@
+<div id="content">
+    <div class="container content-section" id="graph-content">
+        <div class="centre" style="margin: 10px">
+            <!-- cytoscape graf -->
+            <div id="cy"></div>
+        </div>
+    </div>
+</div>
 <section id="assignments" class="container content-section" style="text-align:justify">
 	<!-- Sekcia noviniek -->
 	<div class="jumbotron" style="background-color: transparent">
